--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,17 +7,23 @@ services:
     restart: always
     ports:
       - 27017:27017
+    env_file:
+      - ./api/.env
+    volumes:
+      - ./data/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
     environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
+      MONGO_INITDB_ROOT_USERNAME: ${DATABASE_ROOT}
+      MONGO_INITDB_ROOT_PASSWORD: ${DATABASE_ROOT_PASSWORD}
 
   mongo-express:
     image: mongo-express
     restart: always
     ports:
       - 8081:8081
+    env_file:
+      - ./api/.env
     environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: example
-      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
+      ME_CONFIG_MONGODB_ADMINUSERNAME: ${DATABASE_ROOT}
+      ME_CONFIG_MONGODB_ADMINPASSWORD: ${DATABASE_ROOT_PASSWORD}
+      ME_CONFIG_MONGODB_URL: ${DATABASE}://${DATABASE_ROOT}:${DATABASE_ROOT_PASSWORD}@mongo:${DATABASE_PORT}/
       ME_CONFIG_BASICAUTH: false
