--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - 27017:27017
     env_file:
-      - ./api/.env
+      - api/.env
     volumes:
       - ./data/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
     environment:
@@ -21,7 +21,7 @@ services:
     ports:
       - 8081:8081
     env_file:
-      - ./api/.env
+      - api/.env
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: ${DATABASE_ROOT}
       ME_CONFIG_MONGODB_ADMINPASSWORD: ${DATABASE_ROOT_PASSWORD}
