--- a/api/.env.example
+++ b/api/.env.example
@@ -1,8 +1,8 @@
-DATABASE=
-DATABASE_USER=
-DATABASE_PASSWORD=
-DATABASE_ROOT=
-DATABASE_ROOT_PASSWORD=
+DATABASE=mongodb
+DATABASE_USER=tbd
+DATABASE_PASSWORD=tbd
+DATABASE_ROOT=tbd
+DATABASE_ROOT_PASSWORD=tbd
 DATABASE_HOST="ex.: localhost"
 DATABASE_PORT="27017"
 DATABASE_NAME="ex.: myDb or dbName"
