Small config changes

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 DATABASE="mongodb"
-DATABASE_USER=tbd
-DATABASE_PASSWORD=tbd
-DATABASE_ROOT=tbd
-DATABASE_ROOT_PASSWORD=tbd
-DATABASE_HOST="ex.: localhost"
+DATABASE_USER="user"
+DATABASE_PASSWORD="example"
+DATABASE_ROOT="root"
+DATABASE_ROOT_PASSWORD="example"
+DATABASE_HOST="localhost"
 DATABASE_PORT="27017"
-DATABASE_NAME="ex.: myDb or dbName"
+DATABASE_NAME="tictactoe"
 # Change the url with proper variables
-DATABASE_URL="<database>://<database_user>:<database_password>@<database_host>:<database_port>/<database_name>"
+DATABASE_URL="mongodb://tictactoe:example@localhost:27017/tictactoe"
