--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,4 +27,4 @@ services:
       ME_CONFIG_MONGODB_ADMINUSERNAME: ${DATABASE_ROOT}
       ME_CONFIG_MONGODB_ADMINPASSWORD: ${DATABASE_ROOT_PASSWORD}
       ME_CONFIG_MONGODB_URL: ${DATABASE}://${DATABASE_ROOT}:${DATABASE_ROOT_PASSWORD}@mongo:${DATABASE_PORT}/
-      ME_CONFIG_BASICAUTH: false
+      ME_CONFIG_BASICAUTH: "false"
