Missing isOver variable

--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,7 @@ DATABASE_HOST="localhost"
 DATABASE_PORT="27017"
 DATABASE_NAME="tictactoe"
 # Change the url with proper variables
-DATABASE_URL="mongodb://tictactoe:example@localhost:27017/tictactoe"
+DATABASE_URL="mongodb://user:example@localhost:27017/tictactoe"
+
+#API
+NEXT_PUBLIC_API_URL="http://localhost:3001/"
