fix: Block app between players

--- a/.env.example
+++ b/.env.example
@@ -10,4 +10,4 @@ DATABASE_NAME="tictactoe"
 DATABASE_URL="mongodb://user:example@localhost:27017/tictactoe"
 
 #API
-NEXT_PUBLIC_API_URL="http://localhost:3001/"
+NEXT_PUBLIC_API_URL="http://localhost:3001"
